Standardised references to functions

--- a/content.html
+++ b/content.html
@@ -41,6 +41,6 @@ print(new_float)
 
 <ul>
     <li><code class="language-python">int()</code> truncates towards zero, whilst <code class="language-python">round()</code> rounds to the nearest integer.</li>
-    <li><code class="language-python">round</code> always rounds to the nearest number. <code class="language-python">int</code> will round down for positive numbers and up for negative numbers (both toward zero).</li>
+    <li><code class="language-python">round()</code> always rounds to the nearest number. <code class="language-python">int()</code> will round down for positive numbers and up for negative numbers (both toward zero).</li>
     <li>If you convert a float to an integer, you will lose the decimal part of the number so, even after converting back to a float, the value will be different from the original (unless the original number was already a whole number).</li>
 </ul>
